--- a/templates/admin/app_index.html
+++ b/templates/admin/app_index.html
@@ -1,5 +1,5 @@
 {% extends "admin/index.html" %}
-{% load i18n %}
+{% load i18n admin_tags %}
 
 {% block bodyclass %}{{ block.super }} app-{{ app_label }}{% endblock %}
 
