--- a/field_sites/templates/field_sites/site_detail.html
+++ b/field_sites/templates/field_sites/site_detail.html
@@ -8,8 +8,8 @@
   <table>
       <tbody>
           <tr>
-              <th>{% translate 'Project:' %}</th>
-              <td>{{ site.project }}</td>
+              <th>{% translate 'Grant:' %}</th>
+              <td>{{ site.grant }}</td>
           </tr>
           <tr>
               <th>{% translate 'System:' %}</th>
