moved static and templates ==> utility

--- a/utility/templates/utility/app_index.html
+++ b/utility/templates/utility/app_index.html
@@ -1,4 +1,4 @@
-{% extends "users/home.html" %}
+{% extends "utility/home.html" %}
 {% load i18n %}
 
 {% block bodyclass %}{{ block.super }} app-{{ app_label }}{% endblock %}
@@ -6,9 +6,9 @@
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'users:home' %}">{% translate 'Home' %}</a>
+<a href="{% url 'utility:home' %}">{% translate 'Home' %}</a>
 &rsaquo;
-    {% include "users/app_list.html" with app_list=True show_changelinks=True %}
+    {% include "utility/app_list.html" with app_list=True show_changelinks=True %}
 
 </div>
 {% endblock %}
