--- a/utility/templates/utility/base_site.html
+++ b/utility/templates/utility/base_site.html
@@ -1,9 +1,9 @@
-{% extends "users/base.html" %}
+{% extends "utility/base.html" %}
 
-{% block title %}{{ title }} | {{ site_title|default:_('eDNA Labels') }}{% endblock %}
+{% block title %}{{ title }} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'users:home' %}">{{ site_header|default:_('eDNA Labels') }}</a></h1>
+<h1 id="site-name"><a href="{% url 'account_login' %}">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
