--- a/utility/templates/utility/deprecated/base.html
+++ b/utility/templates/utility/deprecated/base.html
@@ -55,7 +55,7 @@
     <!-- END Header -->
     {% block breadcrumbs %}
     <div class="breadcrumbs">
-    <a href="{% url 'users:home' %}">{% translate 'Home' %}</a>
+    <a href="{% url 'utility:index' %}">{% translate 'Home' %}</a>
     {% if title %} &rsaquo; {{ title }}{% endif %}
     </div>
     {% endblock %}
