--- a/utility/templates/utility/export.html
+++ b/utility/templates/utility/export.html
@@ -13,4 +13,4 @@
       </select>
     <button class="btn btn-primary" type="submit">Export</button>
   </form>
-  <a href="{% url 'users:home' %}">Return Home View</a>
+  <a href="{% url 'utility:index' %}">Return Home View</a>
