--- a/utility/templates/utility/base_site.html
+++ b/utility/templates/utility/base_site.html
@@ -3,7 +3,7 @@
 {% block title %}{{ title }} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'account_login' %}">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
+<h1 id="site-name"><a href="{% url 'index' %}">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
