--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html>
+{% load i18n static %}<!DOCTYPE html>
+{% get_current_language as LANGUAGE_CODE %}{% get_current_language_bidi as LANGUAGE_BIDI %}
+<html lang="{{ LANGUAGE_CODE|default:'en-us' }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
   <head>
-    <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
+    {% block title %}{{ title }} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
+    {% block branding %}
+      <title>{{ site_header|default:_('Maine-eDNA Metadata') }}</title>
     {% endblock %}
+
+    <!-- base css -->
+    <link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static 'utility/css/base.css' %}{% endblock %}">
+    <!-- Bootstrap, JQuery, and Popper -- for form structure -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="{% static 'utility/js/jquery-3.5.1.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'utility/css/bootstrap-4.5.2-dist/bootstrap.min.css' %}">
+    <script src="{% static 'utility/js/bootstrap-4.5.2-dist/bootstrap.min.js' %}"></script>
+    {% block extrastyle %}{% endblock %}
+    {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}">{% endif %}
+    {% block extra_head %}{% endblock %}
+    {% block responsive %}
+      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="{% static "admin/css/responsive.css" %}">
+      {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% static "admin/css/responsive_rtl.css" %}">{% endif %}
+    {% endblock %}
+    {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
   </head>
+  {% load i18n %}
   <body>
     {% block body %}
 
