added login css to base for allauth

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -14,6 +14,7 @@
     <script src="{% static 'utility/js/jquery-3.5.1.min.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'utility/css/bootstrap-4.5.2-dist/bootstrap.min.css' %}">
     <script src="{% static 'utility/js/bootstrap-4.5.2-dist/bootstrap.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'utility/css/login.css' %}">
     {% block extrastyle %}{% endblock %}
     {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}">{% endif %}
     {% block extra_head %}{% endblock %}
