--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -10,8 +10,13 @@
     <script src="{% static "utility/js/jquery-3.5.1.min.js" %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static "utility/css/bootstrap-4.5.2-dist/bootstrap.min.css" %}">
     <script src="{% static "utility/js/bootstrap-4.5.2-dist/bootstrap.min.js" %}"></script>
-    <link rel="stylesheet" type="text/css" href="{% static "utility/css/login.css" %}">
-    {% block extrastyle %}{% endblock %}
+    {% block extrastyle %}
+      {{ block.super }}
+      <link rel="stylesheet" type="text/css" href="{% static "utility/css/login.css" %}">
+      {{ form.media }}
+    {% endblock %}
+
+
     {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}">{% endif %}
     {% block extrahead %}{% endblock %}
     {% block responsive %}
@@ -22,7 +27,6 @@
     {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
   </head>
   {% load i18n %}
-
   <body class="{% block bodyclass %}{% endblock %}"data-admin-utc-offset="{% now "Z" %}">
 
     <!-- Container -->
