--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -10,15 +10,9 @@
     <script src="{% static "utility/js/jquery-3.5.1.min.js" %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static "utility/css/bootstrap-4.5.2-dist/bootstrap.min.css" %}">
     <script src="{% static "utility/js/bootstrap-4.5.2-dist/bootstrap.min.js" %}"></script>
-    {% block extrastyle %}
-      {{ block.super }}
-      <link rel="stylesheet" type="text/css" href="{% static "utility/css/login.css" %}">
-      {{ form.media }}
-    {% endblock %}
-
-
     {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}">{% endif %}
     {% block extrahead %}{% endblock %}
+    {% block extrastyle %}{% endblock %}
     {% block responsive %}
       <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <link rel="stylesheet" type="text/css" href="{% static "admin/css/responsive.css" %}">
