--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,6 +1,10 @@
 {% extends "account/base.html" %}
+{% load i18n static %}
+{% load crispy_forms_tags %}
 
-{% load i18n %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/login.css" %}">
+{{ form.media }}
+{% endblock %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
