--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,6 +1,6 @@
 {% extends "account/base.html" %}
-
 {% load i18n static %}
+{% load crispy_forms_tags %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/login.css" %}">
 {{ form.media }}
@@ -51,7 +51,7 @@
 
   <form class="login" method="POST" action="{% url 'account_login' %}">
     {% csrf_token %}
-    {{form|crispy}}
+    {{ form|crispy }}
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
