fixed style formatting

--- a/utility/static/utility/css/base.css
+++ b/utility/static/utility/css/base.css
@@ -14,7 +14,11 @@ body {
     font-size: 14px;
     font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     color: #333;
-    background: #fff;
+    /*background: #fff; */
+    background: url('../images/login-page-background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
 }
 
 /* LINKS */
