--- a/utility/static/utility/css/login.css
+++ b/utility/static/utility/css/login.css
@@ -1,10 +1,7 @@
 /* LOGIN FORM */
 
 html {
-    background: url('../images/login-page-background.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+    height: 100%;
 }
 
 .content {
