changing login css back to default

--- a/utility/static/utility/css/login.css
+++ b/utility/static/utility/css/login.css
@@ -1,15 +1,7 @@
 /* LOGIN FORM */
 
-html {
-    height: 100%;
-}
-
-.content {
-    background: rgba(255,255,255,.75);
-}
-
 .login {
-    background: none;
+    background: #f8f8f8;
     height: auto;
 }
 
