--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -43,20 +43,20 @@
 
             {% block userlinks %}
               {% if site_url %}
-                <a href="{{ site_url }}">{% translate 'View site' %}</a> /
+                <a href="{{ site_url }}">{% translate 'View site' %}</a> |
               {% endif %}
               {% if user.is_active and user.is_staff %}
                 {% url 'django-admindocs-docroot' as docsroot %}
                 {% if docsroot %}
-                  <a href="{{ docsroot }}">{% translate 'Documentation' %}</a> /
+                  <a href="{{ docsroot }}">{% translate 'Documentation' %}</a> |
                 {% endif %}
               {% endif %}
               {% if user.is_authenticated %}
-                <a href="{% url 'account_email' %}">Change E-mail</a> /
-                <a href="{% url 'account_logout' %}">Sign Out</a> /
+                <a href="{% url 'account_email' %}">Change E-mail</a> |
+                <a href="{% url 'account_logout' %}">Sign Out</a> |
               {% else %}
-                <a href="{% url 'account_login' %}">Sign In</a> /
-                <a href="{% url 'account_signup' %}">Sign Up</a> /
+                <a href="{% url 'account_login' %}">Sign In</a> |
+                <a href="{% url 'account_signup' %}">Sign Up</a> |
               {% endif %}
             {% endblock %}
           </div>
