--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 {% load crispy_forms_tags %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/login.css" %}">
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
 {{ form.media }}
 {% endblock %}
 
