--- a/utility/static/utility/css/allauth_forms.css
+++ b/utility/static/utility/css/allauth_forms.css
@@ -1,29 +1,29 @@
-/* LOGIN FORM */
+/* ALLAUTH FORMS */
 
-.login {
+.allauth_forms {
     /*background: #f8f8f8;*/
     height: auto;
 }
 
-.login #header {
+.allauth_forms #header {
     height: auto;
     padding: 15px 16px;
     justify-content: center;
 }
 
-.login #header h1 {
+.allauth_forms #header h1 {
     font-size: 18px;
 }
 
-.login #header h1 a {
+.allauth_forms #header h1 a {
     color: #fff;
 }
 
-.login #content {
+.allauth_forms #content {
     padding: 20px 20px 0;
 }
 
-.login #container {
+.allauth_forms #container {
     background: none;
     border: 1px solid #eaeaea;
     border-radius: 4px;
@@ -34,18 +34,18 @@
     height: auto;
 }
 
-.login #content-main {
+.allauth_forms #content-main {
     width: 100%;
 }
 
-.login .form-row {
+.allauth_forms .form-row {
     padding: 4px 0;
     float: left;
     width: 100%;
     border-bottom: none;
 }
 
-.login .form-row label {
+.allauth_forms .form-row label {
     padding-right: 0.5em;
     line-height: 2em;
     font-size: 1em;
@@ -54,19 +54,19 @@
     color: #333;
 }
 
-.login .form-row #id_username, .login .form-row #id_password {
+.allauth_forms .form-row #id_username, .allauth_forms .form-row #id_password {
     clear: both;
     padding: 8px;
     width: 100%;
     box-sizing: border-box;
 }
 
-.login span.help {
+.allauth_forms span.help {
     font-size: 10px;
     display: block;
 }
 
-.login .submit-row {
+.allauth_forms .submit-row {
     clear: both;
     padding: 1em 0 0 9.4em;
     margin: 0;
@@ -75,6 +75,6 @@
     text-align: left;
 }
 
-.login .password-reset-link {
+.allauth_forms .password-reset-link {
     text-align: center;
 }
