change div tag to allauth_forms

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
 {{ form.media }}
 {% endblock %}
 
-{% block bodyclass %}{{ block.super }} login{% endblock %}
+{% block bodyclass %}{{ block.super }} allauth_forms{% endblock %}
 
 {% block usertools %}{% endblock %}
 
