--- a/utility/static/utility/css/allauth_forms.css
+++ b/utility/static/utility/css/allauth_forms.css
@@ -23,7 +23,7 @@
 }
 
 .allauth_forms #container {
-    background: #f8f8f8;
+    background: rgba(255,255,255,.075);
     border: 1px solid #eaeaea;
     border-radius: 4px;
     overflow: hidden;
