--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -72,31 +72,33 @@
       {% endblock %}
 
       <div class="{% block contentclass %}{% endblock %}">
-        {% block messages %}
-          {% if messages %}
-              <ul class="messagelist">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
-                {% endfor %}
-              </ul>
-          {% endif %}
-        {% endblock messages %}
-         <!-- Content -->
-        <div id="content" class="{% block coltype %}colM{% endblock %}">
-          {% block pretitle %}{% endblock %}
-          {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
-          {% block content_subtitle %}{% if subtitle %}<h2>{{ subtitle }}</h2>{% endif %}{% endblock %}
-          {% block content %}
-            {% block object-tools %}{% endblock %}
-            {{ content }}
-          {% endblock %}
-          {% block extra_body %}
-          {% endblock %}
-          <br class="clear">
+        <div class="content">
+          {% block messages %}
+            {% if messages %}
+                <ul class="messagelist">
+                  {% for message in messages %}
+                  <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
+                  {% endfor %}
+                </ul>
+            {% endif %}
+          {% endblock messages %}
+           <!-- Content -->
+          <div id="content" class="{% block coltype %}colM{% endblock %}">
+            {% block pretitle %}{% endblock %}
+            {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+            {% block content_subtitle %}{% if subtitle %}<h2>{{ subtitle }}</h2>{% endif %}{% endblock %}
+            {% block content %}
+              {% block object-tools %}{% endblock %}
+              {{ content }}
+            {% endblock %}
+            {% block extra_body %}
+            {% endblock %}
+            <br class="clear">
+          </div>
         </div>
+        <!-- END Content -->
+        {% block footer %}<div id="footer"></div>{% endblock %}
       </div>
-      <!-- END Content -->
-      {% block footer %}<div id="footer"></div>{% endblock %}
     </div>
   <!-- END Container -->
   </body>
