--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -1,11 +1,27 @@
 {% extends "account/base.html" %}
+{% load i18n static %}
+{% load crispy_forms_tags %}
 
-{% load i18n %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{{ form.media }}
+{% endblock %}
 
-{% block head_title %}{% trans "Account Inactive" %}{% endblock %}
+{% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
+
+{% block usertools %}{% endblock %}
+
+{% block nav-global %}{% endblock %}
+
+{% block nav-sidebar %}{% endblock %}
+
+{% block content_title %}{% endblock %}
+
+{% block breadcrumbs %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+<div id="content-main">
+    <h1>{% trans "Account Inactive" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+    <p>{% trans "This account is inactive." %}</p>
+</div>
 {% endblock %}
