--- a/utility/static/utility/css/allauth_forms.css
+++ b/utility/static/utility/css/allauth_forms.css
@@ -22,7 +22,7 @@
     padding: 20px 20px 0;
 }
 
-.allauth_forms #container {
+.allauth_forms #contentcontainer {
     background: rgba(255,255,255,.75);
     border: 1px solid #eaeaea;
     border-radius: 4px;
