commented out conflicting header css

--- a/utility/static/utility/css/allauth_forms.css
+++ b/utility/static/utility/css/allauth_forms.css
@@ -4,6 +4,7 @@
     height: auto;
 }
 
+/*
 .allauth_forms #header {
     height: auto;
     padding: 15px 16px;
@@ -17,7 +18,7 @@
 .allauth_forms #header h1 a {
     color: #fff;
 }
-
+*/
 .allauth_forms #content {
     padding: 20px 20px 0;
 }
