updated body class and readded css

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -21,7 +21,7 @@
     {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
   </head>
   {% load i18n %}
-  <body data-admin-utc-offset="{% now "Z" %}">
+  <body class="{% block bodyclass %}{% endblock %}" data-admin-utc-offset="{% now "Z" %}">
     <!-- Container -->
     <div id="container">
       <!-- Header -->
