--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,6 +1,10 @@
 {% extends "account/base.html" %}
 {% load i18n static %}
 
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{{ form.media }}
+{% endblock %}
+
 {% load account %}
 
 {% block usertools %}{% endblock %}
