readded body block.super block

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -21,7 +21,9 @@
     {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE">{% endblock %}
   </head>
   {% load i18n %}
-  <body class="{% block bodyclass %}{% endblock %}" data-admin-utc-offset="{% now "Z" %}">
+
+  <body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}"
+    data-admin-utc-offset="{% now "Z" %}">
     <!-- Container -->
     <div id="container">
       <!-- Header -->
