--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -6,6 +6,8 @@
 {{ form.media }}
 {% endblock %}
 
+{% block bodyclass %}{{ block.super }} {% endblock %}
+
 {% block usertools %}{% endblock %}
 
 {% block nav-global %}{% endblock %}
