--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,11 +1,12 @@
 {% extends "account/base.html" %}
 {% load i18n static %}
+{% load account %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
 {{ form.media }}
 {% endblock %}
 
-{% load account %}
+{% block bodyclass %}{{ block.super }} {% endblock %}
 
 {% block usertools %}{% endblock %}
 
