--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,12 +1,13 @@
 {% extends "account/base.html" %}
 {% load i18n static %}
 {% load crispy_forms_tags %}
+{% load account %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
 {{ form.media }}
 {% endblock %}
 
-{% load account %}
+{% block bodyclass %}{{ block.super }} {% endblock %}
 
 {% block usertools %}{% endblock %}
 
